--- a/src/main/resources/templates/admin/food/createFood.html
+++ b/src/main/resources/templates/admin/food/createFood.html
@@ -21,7 +21,7 @@
         <!-- Layout container -->
         <div class="layout-page">
             <!-- Navbar -->
-            <nav th:replace="~{admin/fragments/nav :: nav-bar(value_title = 'Create Food')}" />
+            <nav th:replace="~{admin/fragments/nav :: nav-bar(value_title = 'Create Food')}"></nav>
             <!-- / Navbar -->
             <!-- Content wrapper -->
             <div class="content-wrapper">
