--- a/src/main/resources/templates/admin/fragments/menu.html
+++ b/src/main/resources/templates/admin/fragments/menu.html
@@ -132,7 +132,7 @@
                 </li>
             </ul>
         </li>
-        <!--/ Category -->
+        <!--/ Foods -->
 
     </ul>
 </aside>
